src/test/deca/context/invalid/return-invalidTypeWithClass.context
return-invalidTypeWithClass.deca:6: